<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_background"
    android:fitsSystemWindows="true"
    tools:context=".ui.view.add.NewUserActivity">

    <!-- Toolbar -->
    <include
        android:id="@+id/itoolbar"
        layout="@layout/toolbar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_md">

            <!-- Photo -->

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginBottom="@dimen/spacing_md"
                app:cardCornerRadius="@dimen/spacing_md"
                app:cardElevation="4dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imgPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/photo_01"
                        app:shapeAppearanceOverlay="@style/RoundedImage"/>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnChangePhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:layout_margin="@dimen/spacing_md"
                        android:contentDescription="@string/user_image"
                        app:srcCompat="@drawable/ic_camera"
                        app:backgroundTint="?attr/colorPrimary"/>
                </FrameLayout>

            </com.google.android.material.card.MaterialCardView>

            <!--  PERSONALS DATE-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvName"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/spacing_sm"
                android:hint="@string/lastname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvLastname"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/spacing_sm"
                android:hint="@string/company">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvCompany"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- AGE AND WEIGHT -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/age"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tvAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_xxs"
                    android:layout_weight="1"
                    android:hint="@string/weight"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tvWeight"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:inputType="numberDecimal"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <!-- CONTACT -->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/spacing_sm"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvEmail"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/spacing_sm"
                android:hint="@string/phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvPhone"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/spacing_sm"
                android:hint="@string/address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvAddress"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>